# parsec

./: .ccls  .clang-format  CMakeLists.txt  LICENSE  README.md  parsec.hpp  parsec_test.cpp
examples/: CMakeLists.txt  json.cpp  person_parser.cpp
include/parsec/: adapter.hpp  all.hpp  curry.hpp  numeric.hpp  parsec.hpp  parsers.hpp
test/: CMakeLists.txt  parsec_test.cpp
